service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: default
spec:
  selector:
    app: todolist-app
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
      #nodePort: 30002
  type: NodePort
