ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: default
spec:
  rules:
  - host: todo-app-ingress.com
    http:
      paths:
      - backend:
          service:
            name: todo-app-service
            port:
              number: 3000
        path: /*
        pathType: ImplementationSpecific
